--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Returnee Flow Map</title>
   <link rel="stylesheet" href="https://js.arcgis.com/4.28/esri/themes/light/main.css" />
   <script src="https://js.arcgis.com/4.28/"></script>
-  <script src="CanvasFlowmapLayer.js"></script>
   <style>
     html, body, #viewDiv {
       margin: 0;
@@ -31,7 +30,7 @@
 
   <div id="filterPanel">
     <h4>Select Border Points</h4>
-    <!-- we'll auto-populate this using JS -->
+    <!-- checkboxes will be auto-populated -->
   </div>
 
   <div id="legend">
@@ -48,6 +47,11 @@
     </svg>
   </div>
 
+  <!-- Load your JS files after ArcGIS -->
+  <script src="CanvasFlowmapLayer.js"></script>
   <script src="app.js"></script>
+  <script>
+    require(["CanvasFlowmapLayer", "app"]);
+  </script>
 </body>
 </html>
