--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               lineWidth: 2
             }
           },
+          wrappedMarkers: false,
           pathDisplayMode: 'all',
           animationStarted: true,
           animationEasingFamily: 'Cubic',
