--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://js.arcgis.com/3.35/esri/themes/calcite/esri/esri.css">
   
   <!-- see https://esri.github.io/calcite-web/ -->
-  <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.5/css/calcite-web.min.css">
+  <link rel="stylesheet" href="styles/calcite-web.min.css">
   
   <style>
     html,
