--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
       width: 290px;
       opacity: 0.85;
     }
-
+.cus-icon-green {
+    color: #00aa55 !important; /* A nice dark green */
+    background-color: #e6fff2 !important; /* Light green background */
+    border-radius: 4px;
+    padding: 4px;
+  }
     .custom-card-shadow {
       -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
       -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
