--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       opacity: 0.85;
     }
 .cus-icon-green {
-    color: #00aa55 !important; /* A nice dark green */
-    background-color: #e6fff2 !important; /* Light green background */
-    border-radius: 4px;
-    padding: 4px;
+    color: #0033A0 !important; /* A nice dark green */
+    background-color: #0033A0 !important; /* Light green background */
+    border-radius: 7px;
+    padding: 7px;
   }
     .custom-card-shadow {
       -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
