--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       width: 290px;
       opacity: 0.85;
     }
-.cus-icon-green {
-    color: #0033A0 !important; /* A nice dark green */
-    background-color: #0033A0 !important; /* Light green background */
-    border-radius: 7px;
-    padding: 7px;
+    .cus-icon-green {
+     color: #0033A0 !important; /* A nice dark green */
+     background-color: #0033A0 !important; /* Light green background */
+     border-radius: 7px;
+     padding: 7px;
   }
     .custom-card-shadow {
       -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
@@ -132,7 +132,7 @@
 
         <div style="display: flex; align-items: flex-end; justify-content: space-between;">
           <button class="btn btn-small btn-clear btn-half" id="pathAnimationButton" style="width: 49% ;">
-            <i class="icon-ui-pause icon-ui-red"></i>
+            <i class="icon-ui-pause cus-icon-green"></i>
             Toggle
           </button>
           <select id="pathAnimationStyleSelect" style="height: 2.1rem; width: 49%;"></select>
