--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
 </head>
 
 <body class="calcite">
+<div id="cityFilter" style="position: absolute; top: 15px; left: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
+  <label for="sCitySelect" style="font-weight: bold;">Select Source City:</label><br>
+  <select id="sCitySelect" style="width: 200px; margin-top: 5px;">
+    <option value="">-- All Cities --</option>
+  </select>
+</div>
 
   <div id="map"></div>
   <div id="legend" class="esri-widget">
@@ -104,9 +110,9 @@
   
 
 
-  <div class="controls-panel">
-    <div class="card card-bar-blue animate-fade-in custom-card-shadow off" id="controlsPanelCard">
-      <div class="card-content">
+//  <div class="controls-panel">
+//    <div class="card card-bar-blue animate-fade-in custom-card-shadow off" id="controlsPanelCard">
+ //     <div class="card-content">
 
         <h4>Canvas Flowmap Layer</h4>
 
