--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@
 
 <body class="calcite">
 <div id="cityFilter" style="position: absolute; top: 15px; left: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
-  <label for="sCitySelect" style="font-weight: bold;">Select Source City:</label><br>
+  <label for="sCitySelect" style="font-weight: bold;">Select flow monitoring point:</label><br>
   <select id="sCitySelect" style="width: 200px; margin-top: 5px;">
     <option value="">-- All Cities --</option>
   </select>
 </div>
 
   <div id="map"></div>
+  
   <div id="legend" class="esri-widget">
     <h4>Flow Volume</h4>
     <div><span class="legend-line" style="background: yellow; height: 2px;"></span> 1 – 5,000</div>
