--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 </head>
 
 <body class="calcite">
-<div id="cityFilter" style="position: absolute; top: 15px; left: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
+<div id="cityFilter" style="position: absolute; top: 15px; right: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
   <label for="sCitySelect" style="font-weight: bold;">Select flow monitoring point:</label><br>
-  <select id="sCitySelect" style="width: 200px; margin-top: 5px;">
+  <select id="sCitySelect" style="width: 220px; height: 150px; margin-top: 5px; overflow-y: auto;" multiple>
     <option value="">-- All Cities --</option>
   </select>
 </div>
