--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     z-index: 40;
   }
+#cityFilter {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  z-index: 30;
+  background: white;
+  padding: 10px;
+  border-radius: 4px;
+  max-height: none;
+  overflow-y: visible;
+}
+#sCitySelect {
+  max-height: none;
+  overflow-y: visible;
+}
 
   #legend h4 {
     margin: 0 0 8px 0;
