--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 <body class="calcite">
 <div id="cityFilter" style="position: absolute; top: 15px; right: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
   <label for="sCitySelect" style="font-weight: bold;">Select flow monitoring point:</label><br>
-  <select id="sCitySelect" style="width: 220px; height: 150px; margin-top: 5px; overflow-y: auto;" multiple>
-  </select>
+ <div id="sCitySelect" style="max-height: none; overflow-y: visible;"></div>
+
 </div>
 
   <div id="map"></div>
