--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
         overflow-y: auto;
         opacity: 1.0;
       }
+      .city-checkbox-list {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  max-height: none;
+  overflow-y: visible;
+  font-size: 13px;
+}
+
+.city-checkbox-list label {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+  line-height: 1.3;
+}
+
     }
     #legend {
     position: absolute;
@@ -110,7 +127,8 @@
 <body class="calcite">
 <div id="cityFilter" style="position: absolute; top: 15px; right: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
   <label for="sCitySelect" style="font-weight: bold;">Select flow monitoring point:</label><br>
- <div id="sCitySelect" style="max-height: none; overflow-y: visible;"></div>
+<div id="sCitySelect" class="city-checkbox-list"></div>
+
 
 </div>
 
