--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
         overflow-y: auto;
         opacity: 1.0;
       }
-      .city-checkbox-list {
+    .city-checkbox-list {
   display: flex;
   flex-direction: column;
   gap: 4px;
+  margin-top: 8px;
+  font-size: 13px;
   max-height: none;
   overflow-y: visible;
-  font-size: 13px;
 }
 
 .city-checkbox-list label {
@@ -75,6 +76,7 @@
   cursor: pointer;
   line-height: 1.3;
 }
+
 
     }
     #legend {
@@ -124,13 +126,11 @@
   </style>
 </head>
 
-<body class="calcite">
 <div id="cityFilter" style="position: absolute; top: 15px; right: 15px; z-index: 30; background: white; padding: 10px; border-radius: 4px;">
-  <label for="sCitySelect" style="font-weight: bold;">Select flow monitoring point:</label><br>
-<div id="sCitySelect" class="city-checkbox-list"></div>
-
-
+  <label for="sCitySelect" style="font-weight: bold; font-size: 14px;">Select flow monitoring point:</label>
+  <div id="sCitySelect" class="city-checkbox-list"></div>
 </div>
+
 
   <div id="map"></div>
   
