--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </head>
 
 <div id="cityFilter">
-  <label for="sCitySelect" style="font-weight: bold; font-size: 15px;">Select flow monitoring point:</label><br>
+  <label for="sCitySelect" style="font-weight: bold; font-size: 15px;">Select border crossing point:</label><br>
   <div id="sCitySelect" style="max-height: 400px; overflow-y: auto;"></div>
 </div>
 
